--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.7",
     "expo": "~47.0.9",
     "expo-status-bar": "~1.4.2",
+    "nativewind": "^2.0.11",
+    "pod-install": "^0.1.38",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-animatable": "^1.3.3",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "tailwindcss": "^3.2.4"
   },
   "private": true
 }
