--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
+    "cocoapods": "^0.0.0",
     "expo": "~47.0.9",
     "expo-status-bar": "~1.4.2",
+    "gem": "^2.4.3",
+    "install": "^0.13.0",
     "nativewind": "^2.0.11",
     "pod-install": "^0.1.38",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-animatable": "^1.3.3",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "tailwindcss-react-native": "^1.7.10"
