rendering of data

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
+    "axios": "^1.2.1",
     "cocoapods": "^0.0.0",
     "expo": "~47.0.9",
     "expo-status-bar": "~1.4.2",
